Fix email address in po file

--- a/languages/rich-reviews-da_DK.po
+++ b/languages/rich-reviews-da_DK.po
@@ -4,7 +4,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-12-17 07:14+0100\n"
 "PO-Revision-Date: 2014-12-17 08:17+0100\n"
-"Last-Translator: ckjaersig <ckjaersig+wp-test@gmail.com>\n"
+"Last-Translator: ckjaersig <ckjaersig@gmail.com>\n"
 "Language-Team: \n"
 "Language: da_DK\n"
 "MIME-Version: 1.0\n"
